--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
       body {
         margin: 0;
         background-color: black;
+        padding: 10px 20px;
+      }
+      p {
+        color: white;
+        font-family: sans-serif;
+        font-size: 14px;
+        margin: 6px;
       }
     </style>
     <meta charset="UTF-8" />
@@ -13,6 +20,7 @@
     <title>Pacman</title>
   </head>
   <body>
+    <p><span>Score: </span><span id="scoreEl">0</span></p>
     <canvas></canvas>
     <script src="index.js"></script>
   </body>
