--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         font-family: sans-serif;
         font-size: 14px;
         margin: 6px;
+        text-align: center;
+      }
+      canvas {
+        padding: 0;
+        margin: auto;
+        display: block;
       }
     </style>
     <meta charset="UTF-8" />
